# JetRov

./: README.md  setup.sh
arduino/imu_controller/: imu_controller.ino
arduino/motor_controller/: motor_controller.ino
jetrov_arduino/: jetrov_arduino.ino
jetrov_arduino/jetrov_arduino/: jetrov_arduino.ino
jetrov_arduino/jetrov_calibration/: jetrov_calibration.ino
jetrov_control/: CMakeLists.txt  package.xml
jetrov_control/cfg/: JetrovController.cfg
jetrov_control/include/jetrov_control/: ArduinoI2C.h  JHPWMPCA9685.h  MPU6050.h  common.h  const.h  dead_reckoning.h  speed_controller.h  steer_controller.h
jetrov_control/launch/: control.launch  joy_control.launch
jetrov_control/src/nodes/: dead_reckoning_node.cpp  dead_reckoning_node.h  jetrov_controller_node.cpp  jetrov_controller_node.h  jetrov_encoder_node.cpp  jetrov_encoder_node.h  jetrov_imu_node.cpp  jetrov_imu_node.h  operation_check_node.cpp
jetrov_description/: CMakeLists.txt  package.xml
jetrov_description/launch/: description.launch
jetrov_joy/: CMakeLists.txt  package.xml
jetrov_joy/launch/: joy.launch
jetrov_joy_interface/: CMakeLists.txt  package.xml
jetrov_joy_interface/src/: joystick_control_node.cpp  joystick_control_node.h
jetrov_msgs/: CMakeLists.txt  package.xml
jetrov_msgs/include/jetrov_msgs/: default_topics.h
jetrov_msgs/msg/: Command.msg  MarinCtrl.msg  MarinFeedback.msg  MarinMoveDirection.msg  MarinStatus.msg  PulseCount.msg
jetrov_navigation/: CMakeLists.txt  package.xml
jetrov_navigation/config/: ydlidar_params.yaml
jetrov_navigation/config/gmapping/: gmapping_params.yaml
jetrov_navigation/config/move_base/: costmap_common_params.yaml
jetrov_navigation/launch/: marin_rover.launch  move_base.launch  slam.launch  slam_demo.launch
marin_control/: CMakeLists.txt  package.xml
marin_control/launch/: control.launch
marin_control/param/: control_params.yaml
marin_control/src/: marin_odometry_publisher.cpp  marin_state_publisher.cpp  marin_velocity_controller.cpp
marin_description/: CMakeLists.txt  package.xml
marin_description/urdf/: marin.urdf
marin_joy/: package.xml
marin_joy/src/: joystick_controller.cpp
marin_msgs/: CMakeLists.txt  package.xml
marin_msgs/msg/: MarinCtrl.msg
marin_navigation/: CMakeLists.txt  package.xml
marin_navigation/launch/: gmapping.launch  move_base.launch  slam.launch
marin_navigation/param/gmapping/: gmapping_params.yaml
marin_navigation/param/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml
