<?xml version="1.0"?>
<package format="2">
  <name>jetrov_control</name>
  <version>0.0.0</version>
  <description>The jetrov_control package</description>
  <maintainer email="satoshi.ota928@gmail.com">Ota Satoshi</maintainer>
  <author>Ota Satoshi</author>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>jetrov_msgs</depend>

</package>
