<?xml version="1.0"?>
<package format="2">
  <name>jetrov_description</name>
  <version>0.0.0</version>
  <description>The jetrov_description package</description>
  <maintainer email="satoshi.ota928@gmail.com">Ota Satoshi</maintainer>
  <author>Ota Satoshi</author>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

</package>
