<?xml version="1.0"?>
<package format="2">
  <name>jetrov_joy_interface</name>
  <version>0.0.0</version>
  <description>The jetrov_joy_interface package</description>
  <maintainer email="satoshi.ota928@gmail.com">Ota Satoshi</maintainer>
  <author>Ota Satoshi</author>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

</package>
